Fixing background image not showing correctly on smaller screens

--- a/src/stylesheets/contactBlock.css
+++ b/src/stylesheets/contactBlock.css
@@ -1,7 +1,6 @@
 .footerContainer {
   background-image: url('../assets/images/contactBackground.png');
   background-clip: border-box;
-  background-size: contain;
   background-repeat: repeat-x;
 }
 
